# mimix_robot

./: .env.example  .gitignore  README.md  docker-compose.dev.yml
config/mosquitto/: mosquitto.dev.conf
deploy/jetson/: README.md  start_mimix.sh
docs/: ARCHITECTURE.md  PROTOCOL.md  ROS2_ARCHITECTURE.md
firmware/esp32c3_motor_controller/: README.md  esp32c3_motor_controller.ino
ros_ws/: README.md
ros_ws/src/mimix_bringup/: package.xml  setup.cfg  setup.py
ros_ws/src/mimix_bringup/launch/: robot.launch.py
ros_ws/src/mimix_bringup/mimix_bringup/: __init__.py
ros_ws/src/mimix_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/mimix_interfaces/msg/: BehaviorIntent.msg  MotionRequest.msg  PerceptionEvent.msg  RobotStatus.msg
ros_ws/src/mimix_runtime/: package.xml  setup.cfg  setup.py
ros_ws/src/mimix_runtime/mimix_runtime/: __init__.py  behavior_node.py  common.py  perception_adapter_node.py  safety_node.py  usb_serial_bridge_node.py  web_bridge_node.py
services/arduino_bridge/: README.md
services/learning_agent/: README.md
services/motion_service/: README.md
services/robot_gateway/: README.md
services/speech_service/: README.md  elevenlabs_service.py  requirements.txt  start_walle.sh
services/vision/: README.md  requirements.txt  start_vision.sh  vision_service.py
