<?xml version="1.0"?>
<package format="3">
  <name>mimix_bringup</name>
  <version>0.1.0</version>
  <description>Launchers ROS 2 de Mimix.</description>
  <maintainer email="edwarfin24@gmail.com">Mimix Labs</maintainer>
  <license>MIT</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mimix_runtime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
