<?xml version="1.0"?>
<package format="3">
  <name>mimix_interfaces</name>
  <version>0.1.0</version>
  <description>Mensajes ROS 2 neutrales de Mimix.</description>
  <maintainer email="edwarfin24@gmail.com">Mimix Labs</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
