<?xml version="1.0"?>
<package format="3">
  <name>mimix_runtime</name>
  <version>0.1.0</version>
  <description>Nodos ROS 2 mínimos para coordinar Mimix Web y el robot.</description>
  <maintainer email="edwarfin24@gmail.com">Mimix Labs</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>mimix_interfaces</depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
